# aac-codec

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements.txt
part1/: __init__.py  aac_coder_1.py  constants.py  demo_aac_1.py  ssc.py  types.py
part1/tests/: __init__.py  conftest.py  test_aac_coder_1.py  test_demo_aac_1.py  test_filterbank.py  test_ssc.py
part2/: __init__.py  aac_coder_2.py  aac_types.py  constants.py  demo_aac_2.py  filterbank.py  tns.py
part2/tests/: __init__.py  conftest.py  test_aac_coder_2.py  test_demo_aac_2.py  test_ssc.py  test_tns.py
part3/: __init__.py  aac_coder_3.py  constants.py  demo_aac_3.py  filterbank.py  huff_utils.py  psychoacoustic.py  quantizer.py  ssc.py  tns.py  types.py
part3/tests/: __init__.py  conftest.py  test_aac_coder_3.py  test_demo_aac_3.py  test_psychoacoustic.py  test_quantizer.py
